Commented out code to stop overlapping on styles.

--- a/src/styles/Home/SliderNav.css
+++ b/src/styles/Home/SliderNav.css
@@ -1,4 +1,4 @@
-.sliderNav {
+/* .sliderNav {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -29,4 +29,4 @@
     border-radius: 25px;
     color: #fff;
     font-weight: bold;
-}
+} */
